--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
                   <li> <strong>[10/2024-03/2025]</strong>  Part-time Research Staff, <strong> RIKEN Center for Advanced Intelligence Project</strong>.</li>
                   <li> <strong>[04/2020-10/2024]</strong>  Research Assistant, Graduate School of Information Sciences, <strong>Tohoku University</strong>. </li>
                   <li> <strong>[03/2020-03/2022]</strong>  Main Member, <em>"Establishing Neural Architectural Design Methodology Accelerating Paradigm Shift Brought By Deep Learning"</em>, <strong>Ministry of Education, Science, Sports and Culture</strong>. </li>
-                  <li> <strong>[03/2020-03/2022]</strong>  Member, <em>"Obstacle Detection for Vehicle"</em>, <strong>DENSO CORPORATION</strong>.</li>
+                  <li> <strong>[10/2019-03/2020]</strong>  Member, <em>"Obstacle Detection for Vehicle"</em>, <strong>DENSO CORPORATION</strong>.</li>
                   <li> <strong>[12/2018-03/2019]</strong>  Research Assistant, Department of Computer Science, <strong>City University of Hong Kong</strong>.</li>
                   <li> <strong>[04/2016-03/2017]</strong>  Exchange Student, Department of Sciences and Informatics, <strong>Muroran Institute of Technology</strong>.</li>
-                  <li> <strong>[02/2015-06/2017]</strong>  Main memebr,  <em>"Intelligent Traffic Decision Support System"</em>, Zhuhai City.</li>
+                  <li> <strong>[02/2015-06/2017]</strong>  Main Memebr,  <em>"Intelligent Traffic Decision Support System"</em>, Zhuhai City.</li>
                     <!--<li>
                         [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
                     </li>-->
