--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     My long-term research goal is to advance <strong>visual intelligence</strong> and <strong>AI systems</strong> for real-world applications on mobile devices, enabling high-performance, resource-efficient, and scalable <strong>on-device AI</strong>.
                   </p>
                   <p>
-                    <strong>I am on the academic job market this year (2025).</strong> 
+                    <strong>I am on the job market this year (2025).</strong> 
                   </p>
                   
                 </td>
@@ -117,6 +117,9 @@
                     </a> 
                     <a href="https://x.com/LuXiangyong">
                       <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px">
+                    </a>
+                    <a href="https://www.linkedin.com/in/xiangyong-lu-286416115/">
+                      <img src="./images/linkedin.png" height="30px" style="margin-bottom:-3px">
                     </a>
                     <a >
                       <img src="./images/email.png" height="28px" style="margin-bottom:-3px" onclick="getClick('xylu@vision.is.tohoku.ac.jp')" alt="Grapefruit slice atop a pile of other slices">
