--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                       <img src="./images/linkedin.png" height="30px" style="margin-bottom:-3px">
                     </a>
                     <a >
-                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px" onclick="getClick('xylu@vision.is.tohoku.ac.jp')" alt="Grapefruit slice atop a pile of other slices">
+                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px" onclick="getClick('xylu@vision.is.tohoku.ac.jp <br /> xylu926@gmail.com')" alt="Grapefruit slice atop a pile of other slices">
                     </a>
                   </p>
 
