--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                       <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px">
                     </a>
                     <a href="https://www.linkedin.com/in/xiangyong-lu-286416115/">
-                      <img src="./images/linkedin.png" height="30px" style="margin-bottom:-3px">
+                      <img src="./images/linkedin3.png" height="30px" style="margin-bottom:-3px">
                     </a>
                     <a >
                       <img src="./images/email.png" height="28px" style="margin-bottom:-3px" onclick="getClick('xylu@vision.is.tohoku.ac.jp <br /> xylu926@gmail.com')" alt="Grapefruit slice atop a pile of other slices">
