--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                    <p style="text-align:center">
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
-                    
+                    <a >
+                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px" onclick="getClick('xylu@vision.is.tohoku.ac.jp\n xylu926@gmail.com')" alt="Grapefruit slice atop a pile of other slices">
+                    </a>
                     <a href="https://github.com/xyongLu">
                       <img src="./images/github.png" height="30px" style="margin-bottom:-3px" >
                     </a>
@@ -119,10 +121,7 @@
                       <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px">
                     </a>
                     <a href="https://www.linkedin.com/in/xiangyong-lu-286416115/">
-                      <img src="./images/linkedin.png" height="30px" style="margin-bottom:-3px">
-                    </a>
-                    <a >
-                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px" onclick="getClick('xylu@vision.is.tohoku.ac.jp <br /> xylu926@gmail.com')" alt="Grapefruit slice atop a pile of other slices">
+                      <img src="./images/linkedin5.png" height="30px" style="margin-bottom:-3px">
                     </a>
                   </p>
 
