--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                       <img src="./images/twiter.png" height="30px" style="margin-bottom:-3px">
                     </a>
                     <a href="https://www.linkedin.com/in/xiangyong-lu-286416115/">
-                      <img src="./images/linkedin5.png" height="30px" style="margin-bottom:-3px">
+                      <img src="./images/linkedin.png" height="30px" style="margin-bottom:-3px">
                     </a>
                   </p>
 
