--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
           <div id="news" class="card-block dark">
             <div>
                 <ul>
-                  <li> <strong>[12/2024]</strong>  One paper '<strong>CMSA</strong>' was submitted to CVIU. </li>
-                  <li> <strong>[10/2023]</strong>  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24. </li>
-                  <li> <strong>[08/2023]</strong>  One paper was accepted to KSEM'23. </li>
+                  <li style="margin:4px"> <strong>[2024.12]</strong>  One paper '<strong>CMSA</strong>' was submitted to CVIU. </li>
+                  <li style="margin:4px"> <strong>[2023.10]</strong>  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24. </li>
+                  <li style="margin:4px"> <strong>[2023.08]</strong>  One paper was accepted to KSEM'23. </li>
                     <!--<li>
                         [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
                     </li>-->
@@ -193,19 +193,19 @@
           <div id="experience" class="card-block dark">
             <div>
                 <ul>
-                  <li> <strong>[10/2024-03/2025]</strong>  Part-time research staff, <strong> RIKEN Center for Advanced Intelligence Project</strong>.</li>
-                  <li> <strong>[04/2020-10/2024]</strong>  Research assistant, Graduate School of Information Sciences, <strong>Tohoku University</strong>. </li>
-                  <li> <strong>[03/2020-03/2022]</strong>  Main member, <em>"Establishing Neural Architectural Design Methodology Accelerating Paradigm Shift Brought By Deep Learning"</em>, <strong>Ministry of Education, Science, Sports and Culture</strong>. </li>
-                  <li> <strong>[10/2019-03/2020]</strong>  Member, <em>"Obstacle Detection for Vehicle"</em>, <strong>DENSO CORPORATION</strong>.</li>
-                  <li> <strong>[12/2018-03/2019]</strong>  Research assistant, Department of Computer Science, <strong>City University of Hong Kong</strong>.</li>
-                  <li> <strong>[04/2016-03/2017]</strong>  Exchange student, Department of Sciences and Informatics, <strong>Muroran Institute of Technology</strong>.</li>
-                  <li> <strong>[02/2015-06/2017]</strong>  Main memebr,  <em>"Intelligent Traffic Decision Support System"</em>, Zhuhai City.</li>
+                  <li style="margin:4px"> <strong>[2024.10-2025.03]</strong>  Part-time research staff, <strong> RIKEN Center for Advanced Intelligence Project</strong>.</li>
+                  <li style="margin:4px"> <strong>[2020.04-2024.10]</strong>  Research assistant, Graduate School of Information Sciences, <strong>Tohoku University</strong>. </li>
+                  <li style="margin:4px"> <strong>[2020.03-2022.03]</strong>  Main member, <em>"Establishing Neural Architectural Design Methodology Accelerating Paradigm Shift Brought By Deep Learning"</em>, <strong>Ministry of Education, Science, Sports and Culture</strong>. </li>
+                  <li style="margin:4px"> <strong>[2019.10-2020.03]</strong>  Member, <em>"Obstacle Detection for Vehicle"</em>, <strong>DENSO CORPORATION</strong>.</li>
+                  <li style="margin:4px"> <strong>[2018.12-2019.03]</strong>  Research assistant, Department of Computer Science, <strong>City University of Hong Kong</strong>.</li>
+                  <li style="margin:4px"> <strong>[2016.04-2017.03]</strong>  Exchange student, Department of Sciences and Informatics, <strong>Muroran Institute of Technology</strong>.</li>
+                  <li style="margin:4px"> <strong>[2015.02-2017.06]</strong>  Main memebr,  <em>"Intelligent Traffic Decision Support System"</em>, Zhuhai City.</li>
                     <!--<li>
                         [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
                     </li>-->
                 </ul>
             </div>
-
+          </div>
           <!-- Publications heading with two buttons -->
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
@@ -522,19 +522,19 @@
             <div>
                 <ul>
                     <li>
-                      [2021-22] Advance Graduate School Pioneering Research Support Project for Doctoral Students, Japan Science and Technology Agency.
+                      <strong>[2021-22]</strong> Advance Graduate School Pioneering Research Support Project for Doctoral Students, Japan Science and Technology Agency.
                     </li>
                     <li>
-                      [2019-22] Global Hagi Scholarship for Doctoral Students, Tohoku University.
+                      <strong>[2019-22]</strong> Global Hagi Scholarship for Doctoral Students, Tohoku University.
                     </li>
                     <li>
-                      [2017] Outstanding Graduates (GPA 4.0/4.0), Huazhong University of Science and Technology.
+                    <strong>[2017]</strong> Outstanding Graduates (GPA 4.0/4.0), Huazhong University of Science and Technology.
                     </li>
                     <li>
-                      [2016] Zhi Xing Excellent Student Scholarship, Huazhong University of Science and Technology.
+                    <strong>[2016]</strong> Zhi Xing Excellent Student Scholarship, Huazhong University of Science and Technology.
                     </li>
                     <li>
-                      [2016] Merit Graduate Student, Huazhong University of Science and Technology.
+                    <strong>[2016]</strong> Merit Graduate Student, Huazhong University of Science and Technology.
                     </li>
                     <!--<li>
                         [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
