--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
           <div id="news" class="card-block dark">
             <div>
                 <ul>
-                  <li style="margin:4px"> <strong>[2024.12]</strong>  One paper '<strong>CMSA</strong>' was submitted to CVIU. </li>
-                  <li style="margin:4px"> <strong>[2023.10]</strong>  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24. </li>
-                  <li style="margin:4px"> <strong>[2023.08]</strong>  One paper was accepted to KSEM'23. </li>
+                  <li > <strong>[2024.12]</strong>  One paper '<strong>CMSA</strong>' was submitted to CVIU. </li>
+                  <li > <strong>[2023.10]</strong>  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24. </li>
+                  <li > <strong>[2023.08]</strong>  One paper was accepted to KSEM'23. </li>
                     <!--<li>
                         [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
                     </li>-->
