--- a/index.html
+++ b/index.html
@@ -199,10 +199,7 @@
                   <li style="margin:4px"> <strong>[2019.10-2020.03]</strong>  Member, <em>"Obstacle Detection for Vehicle"</em>, <strong>DENSO CORPORATION</strong>.</li>
                   <li style="margin:4px"> <strong>[2018.12-2019.03]</strong>  Research assistant, Department of Computer Science, <strong>City University of Hong Kong</strong>.</li>
                   <li style="margin:4px"> <strong>[2016.04-2017.03]</strong>  Exchange student, Department of Sciences and Informatics, <strong>Muroran Institute of Technology</strong>.</li>
-                  <li style="margin:4px"> <strong>[2015.02-2017.06]</strong>  Main memebr,  <em>"Intelligent Traffic Decision Support System"</em>, Zhuhai City.</li>
-                    <!--<li>
-                        [10/2023] The new websites of ManiSkill and Hillbot are online. Check out them at <a href="https://maniskill.ai/">maniskill.ai</a> and <a href="https://hillbot.ai/">hillbot.ai</a>!
-                    </li>-->
+                  <!--<li style="margin:4px"> <strong>[2015.02-2017.06]</strong>  Main memebr,  <em>"Intelligent Traffic Decision Support System"</em>, Zhuhai City.</li>-->
                 </ul>
             </div>
           </div>
