--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Qianqian Wang</title>
+  <title>Xiangyong Lu</title>
   
-  <meta name="author" content="Qianqian Wang">
+  <meta name="author" content="Xiangyong Lu">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
