--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   </p>
                   <p style="text-align:justify">
                     My current research focuses on <strong>neural network</strong> architectural innovations and optimizations for computer vision applications on resource-limited devices.
-                    My long-term research goal is to advance <strong>visual intelligence</strong> and <strong>AI systems</strong> for real-world applications on mobile devices, enabling high-performance, resource-efficient, and scalable <strong>on-device AI</strong>.
+                    My long-term research goal is to advance <strong>visual intelligence</strong> and <strong>AI systems</strong> for real-world applications on mobile/Edge devices, enabling high-performance, resource-efficient, and scalable <strong>on-device AI</strong>.
                   </p>
                   <p>
                     <strong>I am on the job market this year (2025).</strong> 
@@ -193,13 +193,13 @@
           <div id="experience" class="card-block dark">
             <div>
                 <ul>
-                  <li style="margin:4px"> <strong>[2024.10-2025.03]</strong>  Part-time research staff, <em>"Project: Research and development of image feature extraction models in multimodal AI applications"</em> <strong> RIKEN AIP</strong>.</li> <!--multimodal AI applications for natural disaster risk assessment-->
+                  <li style="margin:4px"> <strong>[2024.10-2025.03]</strong>  Part-time research staff, <em>"Project: Research and development of image feature extraction models in multimodal AI applications"</em>, <strong> RIKEN AIP</strong>.</li> <!--multimodal AI applications for natural disaster risk assessment-->
                   <li style="margin:4px"> <strong>[2020.04-2024.10]</strong>  Research assistant, Graduate School of Information Sciences, <strong>Tohoku University</strong>. </li>
                   <li style="margin:4px"> <strong>[2020.03-2022.03]</strong>  Main member, <em>"Project: Establishing Neural Architectural Design Methodology Accelerating Paradigm Shift Brought By Deep Learning"</em>, <strong>Ministry of Education, Science, Sports and Culture</strong>. </li>
                   <li style="margin:4px"> <strong>[2019.10-2020.03]</strong>  Member, <em>"Project: Obstacle Detection for Vehicle"</em>, <strong>DENSO CORPORATION</strong>.</li>
                   <li style="margin:4px"> <strong>[2018.12-2019.03]</strong>  Research assistant, Department of Computer Science, <strong>City University of Hong Kong</strong>.</li>
                   <li style="margin:4px"> <strong>[2016.04-2017.03]</strong>  Exchange student, Department of Sciences and Informatics, <strong>Muroran Institute of Technology</strong>.</li>
-                  <li style="margin:4px"> <strong>[2015.02-2017.06]</strong>  Main memebr,  <em>"Project:Intelligent Traffic Decision Support System"</em> <strong>HUST</strong>, Wuhan.</li>
+                  <!--<li style="margin:4px"> <strong>[2015.02-2017.06]</strong>  Main memebr,  <em>"Project:Intelligent Traffic Decision Support System"</em> <strong>HUST</strong>, Wuhan.</li>-->
                 </ul>
             </div>
           </div>
