--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                   <li style="margin:4px"> <strong>[2019.10-2020.03]</strong>  Member, <em>"Project: Obstacle Detection for Vehicle"</em>, <strong>DENSO CORPORATION</strong>.</li>
                   <li style="margin:4px"> <strong>[2018.12-2019.03]</strong>  Research assistant, Department of Computer Science, <strong>City University of Hong Kong</strong>.</li>
                   <li style="margin:4px"> <strong>[2016.04-2017.03]</strong>  Exchange student, Department of Sciences and Informatics, <strong>Muroran Institute of Technology</strong>.</li>
-                  <!--<li style="margin:4px"> <strong>[2015.02-2017.06]</strong>  Main memebr,  <em>"Project:Intelligent Traffic Decision Support System"</em> <strong>HUST</strong>, Wuhan.</li>-->
+                  <li style="margin:4px"> <strong>[2015.02-2017.06]</strong>  Main memebr,  <em>"Project:Intelligent Traffic Decision Support System"</em> <strong>HUST</strong>, Wuhan.</li>
                 </ul>
             </div>
           </div>
