--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
           <div id="news" class="card-block dark">
             <div>
                 <ul>
+                  <li > <strong>[2025.04]</strong>  '<strong>CMSA</strong>' was conditionally accepted for publication in CVIU. </li>
                   <li > <strong>[2024.12]</strong>  One paper '<strong>CMSA</strong>' was submitted to CVIU. </li>
                   <li > <strong>[2023.10]</strong>  One paper '<strong>SBCFormer</strong>' was accepted to WACV'24. </li>
                   <li > <strong>[2023.08]</strong>  One paper was accepted to KSEM'23. </li>
@@ -419,6 +420,28 @@
                     <strong>Xiangyong Lu</strong>, Kaoru Ota, Mianxiong Dong, Chen Yu, Hai Jin
                     <br>
                     <em> IEEE Transactions on Sustainable Computing</em> , 2017
+                    <br>
+                    <!--<a href="https://diffusionfeatures.github.io/">project page</a> / -->
+                    <a href="https://ieeexplore.ieee.org/abstract/document/7984819">arXiv</a> 
+                    <!--<a href="https://github.com/JunjH/Boosting-Light-Weight-Depth-Estimation">code</a> -->
+                    <p></p>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td style="padding:20px;width:25%;vertical-align:middle">
+                    <div class="one">
+                      <!--<img src='images/3layerPNN.png' id='dift_before' width="160">-->
+                    </div>
+                  </td>
+                  <td style="padding:16px;width:75%;vertical-align:middle">
+                    <a href="https://ieeexplore.ieee.org/abstract/document/7984819">
+                    <papertitle>A Method and System for Predicting Public Transportation Demand Based on Urban Big Data</papertitle>
+                    </a>
+                    <br>
+                    Hai Jin, Chen Yu, <strong>Xiangyong Lu</strong>, Jun Chen, Liqiang Niu
+                    <br>
+                    <strong><em> Chinese Patent</em> </strong>, 2017
                     <br>
                     <!--<a href="https://diffusionfeatures.github.io/">project page</a> / -->
                     <a href="https://ieeexplore.ieee.org/abstract/document/7984819">arXiv</a> 
