--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                     <strong><em> Chinese Patent</em> </strong>, 2017
                     <br>
                     <!--<a href="https://diffusionfeatures.github.io/">project page</a> / -->
-                    <a href="https://ieeexplore.ieee.org/abstract/document/7984819">arXiv</a> 
+                    <!--<a href="https://patents.google.com/"></a> -->
                     <!--<a href="https://github.com/JunjH/Boosting-Light-Weight-Depth-Estimation">code</a> -->
                     <p></p>
                   </td>
