--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                     </div>
                   </td>
                   <td style="padding:16px;width:75%;vertical-align:middle">
-                    <a href="https://ieeexplore.ieee.org/abstract/document/7984819">
+                    <a href="https://arxiv.org/pdf/2112.04682">
                     <papertitle>A Method and System for Predicting Public Transportation Demand Based on Urban Big Data</papertitle>
                     </a>
                     <br>
