--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                   </td>
                   <td style="padding:16px;width:75%;vertical-align:middle">
                     <a href="https://ieeexplore.ieee.org/abstract/document/7984819">
-                    <papertitle>Predicting transportation carbon emission with urban big data</papertitle>
+                    <papertitle>Predicting Transportation Carbon Emission with Urban Big Data</papertitle>
                     </a>
                     <br>
                     <strong>Xiangyong Lu</strong>, Kaoru Ota, Mianxiong Dong, Chen Yu, Hai Jin
