--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     at <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, supervised by <a href="https://scholar.google.com/citations?user=kIfNRN4AAAAJ&hl=zh-CN&oi=ao">Prof. Chen Yu</a> and <a href="https://scholar.google.com/citations?user=o02W0aEAAAAJ&hl=zh-CN&oi=ao">Prof. Hai Jin</a>.
                   </p>
                   <p style="text-align:justify">
-                    My current research focuses on <strong>neural network</strong> architectural innovations and optimizations for computer vision applications on resource-limited devices.
-                    My long-term research goal is to advance <strong>visual intelligence</strong> and <strong>AI systems</strong> for real-world applications on mobile/Edge devices, enabling high-performance, resource-efficient, and scalable <strong>on-device AI</strong>.
+                    My current research focuses on <strong>neural network</strong> architectural innovations and optimizations for computer vision applications, with particular emphasis on challenges posed by resource-constrained environments.
+                    My long-term research objective is to advance <strong>visual intelligence</strong> and <strong>AI systems</strong> for real-world applications, by enabling high-performance, resource-efficient <strong>on-device AI</strong> and endowing it with powerful multimodal reasoning capacities.
                   </p>
                   <p>
                     <strong>I am on the job market this year (2025).</strong> 
