--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
                     <a >
-                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px" onclick="getClick('lu.xiangyong.q1@dc.tohoku.ac.jp\n')" alt="Grapefruit slice atop a pile of other slices">
+                      <img src="./images/email.png" height="28px" style="margin-bottom:-3px" onclick="getClick('xylu926@gmail.com\n')" alt="Grapefruit slice atop a pile of other slices">
                     </a>
                     <a href="https://github.com/xyongLu">
                       <img src="./images/github.png" height="30px" style="margin-bottom:-3px" >
