--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                   
                 </td>
                 <td style="padding:2.5%;width:25%;max-width:25%">
-                  <a href="images/XiangyongLu.jpg">
-                    <img style="width:90%;max-width:90%" alt="profile photo" src="images/xiangyongLu.jpg" class="hoverZoomLink">
+                  <a><!--<a href="images/xiangyongLu.jpg">-->
+                    <img style="width:80%;max-width:80%; float:right" alt="profile photo" src="images/xiangyongLu.jpg" class="hoverZoomLink">
                   </a>
                    <p style="text-align:center">
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
