--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </td>
                 <td style="padding:2.5%;width:25%;max-width:25%">
                   <a><!--<a href="images/xiangyongLu.jpg">-->
-                    <img style="width:80%;max-width:80%; float:right" alt="profile photo" src="images/xiangyongLu.jpg" class="hoverZoomLink">
+                    <img style="width:80%;max-width:80%" alt="profile photo" src="images/xiangyongLu.jpg" class="hoverZoomLink">
                   </a>
                    <p style="text-align:center">
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
