--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                   
                 </td>
                 <td style="padding:2.5%;width:25%;max-width:25%">
-                  <a><!--<a href="images/xiangyongLu.jpg">-->
+                  <a style="text-align:center"><!--<a href="images/xiangyongLu.jpg">-->
                     <img style="width:80%;max-width:80%" alt="profile photo" src="images/xiangyongLu.jpg" class="hoverZoomLink">
                   </a>
-                   <p style="text-align:center">
+                  <p style="text-align:center">
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/qianqianwang_cv.pdf">CV</a> &nbsp;/&nbsp; -->
                     <a >
