--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                   
                 </td>
                 <td style="padding:2.5%;width:25%;max-width:25%">
-                  <a style="text-align:center"><!--<a href="images/xiangyongLu.jpg">-->
-                    <img style="width:80%;max-width:80%" alt="profile photo" src="images/xiangyongLu.jpg" class="hoverZoomLink">
+                  <a><!--<a href="images/xiangyongLu.jpg">-->
+                    <img style="width:80%;max-width:80%; display:block; margin-left:auto; margin-right:0;" alt="profile photo" src="images/xiangyongLu.jpg" class="hoverZoomLink">
                   </a>
                   <p style="text-align:center">
                     <!-- <a href="mailto:qianqianwang@berkeley.edu">Email</a> &nbsp;/&nbsp; -->
