--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
             <div>
                 <ul>
                     <li>
-                      <strong>Reviewer</strong>: IJCV24, CVPR24/25, ECCV24, WACV25, ACCV24, IEICE25 
+                      <strong>Reviewer</strong>: IJCV24/25, CVPR24/25, ECCV24, WACV25, ACCV24, IEICE25 
                     </li>
                     <li>
                       In previous years, I also reviewed papers on big data mining and intelligent systems for IEEE Transactions on Vehicular Technology, Vehicular Technology Conference, and CPSCom.
