--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   </p>
                   <p style="text-align:justify">
                     My current research focuses on <strong>neural network</strong> architectural innovations and optimizations for computer vision applications, with particular emphasis on challenges posed by resource-constrained environments.
-                    My long-term research objective is to advance <strong>visual intelligence</strong> and <strong>AI systems</strong> for real-world applications, by enabling high-performance, resource-efficient <strong>on-device AI</strong> and endowing it with powerful multimodal reasoning capacities.
+                    My long-term research objective is to advance <strong>visual intelligence</strong> and <strong>AI systems</strong> for real-world applications, by enabling high-performance, resource-efficient <strong>on-device AI</strong> and endowing it with powerful <strong>multimodal reasoning</strong> capacities.
                   </p>
                   <p>
                     <strong>I am on the job market this year (2025).</strong> 
