--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
             <div>
                 <ul>
                     <li>
-                      <strong>Reviewer</strong>: CVPR24/25, ICCV25, ECCV24, WACV25, ACCV24, IJCV, IEICE 
+                      <strong>Reviewer</strong>: CVPR, ICCV, ECCV, WACV, ACCV, IJCV, IEICE 
                     </li>
                     <li>
                       In previous years, I also reviewed papers on big data mining and intelligent systems for IEEE Transactions on Vehicular Technology, Vehicular Technology Conference, and CPSCom.
