--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </style>
 
 <body>
-  <table style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background:#f5f6f7;">
+  <table style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background:#f3f5f6;">
     <tbody>
       <tr style="padding:0px">
         <td style="padding:0px">
@@ -99,7 +99,7 @@
                     My long-term research objective is to advance <strong>visual intelligence</strong> and <strong>AI systems</strong> for real-world applications, by enabling high-performance, resource-efficient <strong>on-device AI</strong> and endowing it with powerful <strong>multimodal reasoning</strong> capacities.
                   </p>
                   <p>
-                    <strong>I am on the job market this year (2025).</strong> 
+                    <del>I am on the job market this year (2025).</del> 
                   </p>
                   
                 </td>
@@ -317,7 +317,7 @@
                 <tr>
                   <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
-                      <img src='images/cmsa.png' id='dift_before' width="160">
+                      <img src='images/cmsa.png' id='dift_before' width="180">
                     </div>
                   </td>
                   <td style="padding:16px;width:75%;vertical-align:middle">
@@ -341,7 +341,7 @@
                 <tr>
                   <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
-                      <img src='images/sbcformer.png' id='dift_before' width="160">
+                      <img src='images/sbcformer.png' id='dift_before' width="180">
                     </div>
                   </td>
                   <td style="padding:16px;width:75%;vertical-align:middle">
@@ -365,7 +365,7 @@
                 <tr>
                   <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
-                      <img src='images/boostKD.png' id='dift_before' width="160">
+                      <img src='images/boostKD.png' id='dift_before' width="180">
                     </div>
                   </td>
                   <td style="padding:16px;width:75%;vertical-align:middle">
@@ -387,7 +387,7 @@
                 <tr>
                   <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
-                      <img src='images/clairvoyance.png' id='dift_before' width="160">
+                      <img src='images/clairvoyance.png' id='dift_before' width="180">
                     </div>
                   </td>
                   <td style="padding:16px;width:75%;vertical-align:middle">
@@ -409,7 +409,7 @@
                 <tr>
                   <td style="padding:20px;width:25%;vertical-align:middle">
                     <div class="one">
-                      <img src='images/3layerPNN.png' id='dift_before' width="160">
+                      <img src='images/3layerPNN.png' id='dift_before' width="180">
                     </div>
                   </td>
                   <td style="padding:16px;width:75%;vertical-align:middle">
