--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </style>
 
 <body>
-  <table style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background:#f3f5f6;">
+  <table style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background:#fdfdfd;">
     <tbody>
       <tr style="padding:0px">
         <td style="padding:0px">
